--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -1,36 +1,32 @@
-name: Python application test
+name: "Terraform"
 
 on:
   push:
-    branches: [feature/**]
+    branches:
+      - main
   pull_request:
-    branches: [main]
 
 jobs:
-  build:
+  terraform:
+    name: "Terraform"
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
         with:
-          python-version: 3.8
+          terraform_version: 1.5.3
 
-      - name: Install dependencies
+      - name: Terraform Format and Validate
         run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          terraform fmt -check
+          terraform init
+          terraform validate
 
-      - name: Lint with flake8
+      - name: Terraform Plan
+        if: github.event_name == 'pull_request'
         run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
-      - name: Test with pytest
-        run: |
-          pytest
+          terraform plan -no-color
+        continue-on-error: true
